--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -1,7 +1,10 @@
+*
+  outline: 1px solid red !important  
 body
   padding: 0
   margin: 0
-  
+h1
+  display: none
 .container
   width: 1100px
   margin: 0 auto
