--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,3 +6,6 @@
 @import 'blocks/action'
 @import 'blocks/working'
 @import 'blocks/feedback'
+@import 'blocks/payment-offer'
+@import 'blocks/price'
+@import 'blocks/conditions'
