--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,17 @@ body {
 }
 
 .header {
+  position: fixed;
+  width: 100%;
   height: 125px;
-  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.85);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  z-index: 999;
 }
 
 .header__container {
@@ -159,17 +162,9 @@ body {
   }
 }
 
-* {
-  outline: 1px solid red !important;
-}
-
 body {
   padding: 0;
   margin: 0;
-}
-
-h1 {
-  display: none;
 }
 
 .container {
@@ -203,13 +198,19 @@ h1 {
   }
 }
 
+.title {
+  font-family: 'Exo 2', sans-serif;
+  font-size: 40px;
+  font-weight: bold;
+}
+
 .button {
   font-family: sans-serif;
   color: #ffffff;
-  font-size: 30px;
-  padding: 8px;
+  font-size: 20px;
+  padding: 15px;
   border: none;
-  border-radius: 10px;
+  border-radius: 30px;
   background-color: #FFBC00;
   outline: none;
   max-height: 60px;
@@ -223,17 +224,35 @@ h1 {
   cursor: pointer;
 }
 
+@media (max-width: 475px) {
+  .button {
+    font-size: 16px;
+    padding: 15px;
+  }
+}
+
+@media (max-width: 390px) {
+  .button {
+    font-size: 14px;
+    padding: 15px;
+  }
+}
+
+@media (max-width: 320px) {
+  .title {
+    font-size: 30px;
+  }
+}
+
 .feature {
   background-color: #ffffff;
 }
 
 .feature__title {
   color: #000000;
-  font-family: 'Exo 2', sans-serif;
-  font-weight: bold;
-  font-size: 25px;
   margin-bottom: 85px;
   padding-top: 35px;
+  font-size: 25px;
 }
 
 .feature__cards {
@@ -322,6 +341,7 @@ h1 {
 }
 
 .action {
+  padding-top: 125px;
   color: #ffffff;
   background-image: url("../img/action-bg.jpg");
   background-repeat: no-repeat;
@@ -364,7 +384,7 @@ h1 {
 
 .action__button {
   margin-top: 20px;
-  margin-left: 240px;
+  margin-left: 280px;
 }
 
 @media (max-width: 1080px) {
@@ -382,13 +402,13 @@ h1 {
     padding-top: 50px;
   }
   .action__button {
-    margin-left: 160px;
+    margin-left: 200px;
   }
 }
 
 @media (max-width: 820px) {
   .action__button {
-    margin-left: 140px;
+    margin-left: 180px;
   }
 }
 
@@ -396,16 +416,13 @@ h1 {
   .action__inner {
     margin: 0 auto !important;
   }
-  .action__subtitle p {
-    color: #000000;
-    padding: 10px;
-    border-radius: 50%;
-    background-color: #ffffff;
+  .action__subtitle {
+    margin: 20px;
   }
-  .action__passage {
-    padding: 0 20px;
-    background-color: #000000;
-    border-radius: 50%;
+  .action__subtitle p {
+    background-color: rgba(0, 0, 0, 0.75);
+    width: 100%;
+    border-radius: 10px;
   }
   .action__button {
     margin-left: 50%;
@@ -414,33 +431,24 @@ h1 {
   }
 }
 
-@media (max-width: 605px) {
-  .action__inner {
-    padding: 0 20px;
-  }
-  .action__title h1 {
-    font-size: 50px;
-  }
-  .action__subtitle p {
-    font-size: 35px;
-  }
-}
-
-@media (max-width: 475px) {
-  .action__title h1 {
-    font-size: 40px;
-  }
-  .action__subtitle p {
-    font-size: 30px;
-  }
-}
-
+/*@media (max-width: 605px)
+  .action
+    &__title h1
+      font-size: 70px
+    &__subtitle p
+      font-size: 45px */
+/*@media (max-width: 475px)
+  .action
+    &__title h1
+      font-size: 40px
+    &__subtitle p
+      font-size: 30px */
 @media (max-width: 400px) {
   .action__title h1 {
-    font-size: 30px;
+    font-size: 65px;
   }
   .action__subtitle p {
-    font-size: 20px;
+    font-size: 40px;
   }
 }
 
@@ -520,10 +528,7 @@ h1 {
   margin-bottom: 30px;
 }
 
-.working__title h1 {
-  font-family: 'Exo 2', sans-serif;
-  font-size: 40px;
-  font-weight: bold;
+.working__title h3 {
   text-align: center;
   padding-top: 45px;
   padding-bottom: 35px;
@@ -596,11 +601,8 @@ h1 {
   background-color: #ffffff;
 }
 
-.feedback__title h1 {
+.feedback__title {
   color: #647374;
-  font-family: 'Exo 2', sans-serif;
-  font-size: 40px;
-  font-weight: bold;
   text-align: center;
   padding-top: 35px;
   padding-bottom: 75px;
@@ -664,9 +666,15 @@ h1 {
 .feedback__button {
   margin-top: 30px;
   margin-bottom: 30px;
-  margin-left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+}
+
+.button__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media (max-width: 1100px) {
@@ -676,6 +684,9 @@ h1 {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  .feedback__img {
+    margin-bottom: 30px;
   }
   .feedback__card-1,
   .feedback__card-3,
@@ -721,5 +732,154 @@ h1 {
   .feedback__card-5 {
     margin: 0;
   }
+}
+
+.payment-offer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-bottom: 35px;
+  background-color: #ffffff;
+}
+
+.payment {
+  margin-right: 20px;
+}
+
+.payment__title h5 {
+  color: #647374;
+  text-align: left;
+  margin: 20px 0;
+}
+
+.payment__subtitle {
+  font-family: 'Exo 2', sans-serif;
+  font-weight: light;
+  font-size: 17px;
+}
+
+.payment__img-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: left;
+  margin-top: 50px;
+}
+
+.payment__img-wrap img {
+  margin: 0 10px;
+  height: 30px;
+}
+
+.separator {
+  color: #647374;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.offer {
+  margin-left: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.offer__title h6 {
+  color: #647374;
+  text-align: left;
+  margin: 20px 0;
+}
+
+.offer__subtitle {
+  font-family: 'Exo 2', sans-serif;
+  font-weight: light;
+  font-size: 17px;
+  margin-bottom: 25px;
+}
+
+.offer__button {
+  max-width: 250px;
+}
+
+@media (max-width: 660px) {
+  .payment-offer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  .payment__title h5,
+  .payment__img-wrap {
+    text-align: center;
+    margin-left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+  .offer__title h6,
+  .offer__button {
+    margin-left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    text-align: center;
+  }
+}
+
+.price {
+  height: 600px;
+  background-image: url("../img/bg-price.jpg");
+  position: relative;
+}
+
+.price:before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 0;
+  height: 0;
+  border-top: 30px solid transparent;
+  border-left: 40px solid #ffffff;
+  border-bottom: 30px solid transparent;
+  top: -10px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.price:after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 0;
+  height: 0;
+  border-top: 30px solid transparent;
+  border-right: 40px solid #ffffff;
+  border-bottom: 30px solid transparent;
+  bottom: -10px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.conditions {
+  background-image: url("../img/bg-conditions.jpg");
+  background-position: center top;
+  height: 600px;
 }
 /*# sourceMappingURL=style.css.map */
