--- a/css/style4.css
+++ b/css/style4.css
@@ -1,6 +1,7 @@
 
 #countbox
 {
+	overflow: hidden;
 	color: white;
 	font-family: 'Marck Script';
 	font-size: 65px;
@@ -8,6 +9,7 @@
 	line-height: 82px;
 	width: 436px;
 	border: 4px solid rgba(255, 255, 255, .75);
+	border-radius: 10px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -36,29 +38,16 @@
 }
 #countbox-days-text,#countbox-hours-text,#countbox-mins-text,#countbox-secs-text
 {
+	font-size: 20px;
 	background-position: center;
 	background-repeat: no-repeat;
 	height: 14px !important;
-	margin-top: 90px;
+	margin-top: 30px;
+	margin-left: 10px;
 	position: absolute;
-	width: 106px;
 }
-#countbox-days-text
-{
-	background-image: url('../images/days_text.gif');
-}
-
-#countbox-hours-text
-{
-	background-image: url('../images/hours_text.gif');
-}
-#countbox-mins-text
-{
-	background-image: url('../images/mins_text.gif');
-}
-#countbox-secs-text
-{
-	background-image: url('../images/secs_text.gif');
+#countbox-days-text,#countbox-hours-text{
+	margin-left: 20px;
 }
 #countbox-days1 span, #countbox-days2 span, #countbox-hours1 span, #countbox-hours2 span, #countbox-mins1 span, #countbox-mins2 span, #countbox-secs1 span, #countbox-secs2 span
 {
@@ -89,11 +78,15 @@
 	}
 }
 @media screen and (max-width: 475px){
+	#countbox-days-text,#countbox-hours-text,#countbox-mins-text,#countbox-secs-text{
+		font-size: 12px;
+		margin-top: 20px;
+	}
 	#countbox-days1,#countbox-hours1,#countbox-mins1,#countbox-secs1,#countbox-days2,#countbox-hours2,#countbox-mins2,#countbox-secs2{
 		width: 35px;
 	}
 	#countbox{
-		font-size: 25px;
+		font-size: 55px;
 		height: 50px;
 		width: 250px;
 	}
