--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -1,11 +1,16 @@
 
+
+.title
+  +exo2
+  font-size: 40px
+  font-weight: bold
 .button
   font-family: sans-serif
   color: #ffffff
-  font-size: 30px
-  padding: 8px
+  font-size: 20px
+  padding: 15px
   border: none
-  border-radius: 10px
+  border-radius: 30px
   background-color: #FFBC00
   outline: none
   max-height: 60px
@@ -14,3 +19,14 @@
   &:hover
     background-color: #C15500
     cursor: pointer
+@media (max-width: 475px)
+  .button
+    font-size: 16px
+    padding: 15px
+@media (max-width: 390px)
+  .button
+    font-size: 14px
+    padding: 15px
+@media (max-width: 320px)
+  .title
+    font-size: 30px
