--- a/sass/blocks/_action.sass
+++ b/sass/blocks/_action.sass
@@ -1,4 +1,5 @@
 .action
+  padding-top: 125px
   color: #ffffff
   background-image: url('../img/action-bg.jpg')
   background-repeat: no-repeat
@@ -27,7 +28,7 @@
     color: yellow
 .action__button
   margin-top: 20px
-  margin-left: 240px
+  margin-left: 280px
 
 @media (max-width: 1080px)
   .action
@@ -41,36 +42,31 @@
     &__outer
       padding-top: 50px
     &__button
-      margin-left: 160px
+      margin-left: 200px
 @media (max-width: 820px)
   .action
     &__button
-      margin-left: 140px
+      margin-left: 180px
 @media (max-width: 800px)
   .action
     &__inner
       margin: 0 auto !important
+    &__subtitle
+      margin: 20px
     &__subtitle p
-      color: #000000
-      padding: 10px
-      border-radius: 50%
-      background-color: #ffffff
-    &__passage
-      padding: 0 20px
-      background-color: #000000
-      border-radius: 50%
+      background-color: rgba(0, 0, 0, .75)
+      width: 100%
+      border-radius: 10px
     &__button
       margin-left: 50%
       transform: translateX(-50%)
-@media (max-width: 605px)
+/*@media (max-width: 605px)
   .action
-    &__inner
-      padding: 0 20px
     &__title h1
-      font-size: 50px
+      font-size: 70px
     &__subtitle p
-      font-size: 35px
-@media (max-width: 475px)
+      font-size: 45px
+/*@media (max-width: 475px)
   .action
     &__title h1
       font-size: 40px
@@ -79,6 +75,6 @@
 @media (max-width: 400px)
   .action
     &__title h1
-      font-size: 30px
+      font-size: 65px
     &__subtitle p
-      font-size: 20px
+      font-size: 40px
