--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -3,11 +3,15 @@ body
   margin: 0
   background-color: #f1f1f1
 
+
 .header
+  position: fixed
+  width: 100%
   height: 125px
-  background-color: #ffffff
+  background-color: rgba(255, 255, 255, .85)
   display: flex
   align-items: center
+  z-index: 999
 .header__container
   display: flex
   justify-content: space-between
